// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AccordionItem /> should render the branch \`Quartel General\` 1`] = `
<div
  class="css-hbebh7"
>
  <div
    class="css-1s9w40j"
  >
    <h1
      class="css-1ccxq8z"
    >
      Nome Completo
    </h1>
    <button
      aria-label="button-toogle"
      class="css-e6mruz"
    >
      <div
        class="css-o34hqt"
      >
        <img
          class="css-1q4j5aa"
          src="/img/brand.svg"
        />
        <h1
          class="css-1fppzxh"
        >
          Pikachu Soares do Santos Dias
        </h1>
      </div>
      <svg
        color="#587169"
        fill="currentColor"
        height="24"
        stroke="currentColor"
        stroke-width="0"
        style="color: rgb(88, 113, 105);"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0V0z"
          fill="none"
        />
        <path
          d="M7.41 8.59L12 13.17l4.59-4.58L18 10l-6 6-6-6 1.41-1.41z"
        />
      </svg>
    </button>
    <div
      class="css-58t2qa"
    >
      <div>
        <h1
          class="css-1ccxq8z"
        >
          Departamento
        </h1>
        <p
          class="css-ud68x3"
        >
          Administrativo
        </p>
      </div>
      <div>
        <h1
          class="css-1ccxq8z"
        >
          Cargo
        </h1>
        <p
          class="css-ud68x3"
        >
          Analista
        </p>
      </div>
      <div>
        <h1
          class="css-1ccxq8z"
        >
          Unidade
        </h1>
        <p
          class="css-ud68x3"
        >
          Quartel General
        </p>
      </div>
    </div>
    <div
      class="css-nrzz4n"
    >
      <h1
        class="css-1ccxq8z"
      >
        Status
      </h1>
      <div
        class="css-1xl4ljt"
        color="active"
      >
        <h3
          class="css-1rt2vi7"
        >
          Ativo
        </h3>
      </div>
    </div>
  </div>
</div>
`

exports[
	`<AccordionItem /> should render the department \`Administrativo\` 1`
] = `
<div
  class="css-hbebh7"
>
  <div
    class="css-1s9w40j"
  >
    <h1
      class="css-1ccxq8z"
    >
      Nome Completo
    </h1>
    <button
      aria-label="button-toogle"
      class="css-e6mruz"
    >
      <div
        class="css-o34hqt"
      >
        <img
          class="css-1q4j5aa"
          src="/img/brand.svg"
        />
        <h1
          class="css-1fppzxh"
        >
          Pikachu Soares do Santos Dias
        </h1>
      </div>
      <svg
        color="#587169"
        fill="currentColor"
        height="24"
        stroke="currentColor"
        stroke-width="0"
        style="color: rgb(88, 113, 105);"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0V0z"
          fill="none"
        />
        <path
          d="M7.41 8.59L12 13.17l4.59-4.58L18 10l-6 6-6-6 1.41-1.41z"
        />
      </svg>
    </button>
    <div
      class="css-58t2qa"
    >
      <div>
        <h1
          class="css-1ccxq8z"
        >
          Departamento
        </h1>
        <p
          class="css-ud68x3"
        >
          Administrativo
        </p>
      </div>
      <div>
        <h1
          class="css-1ccxq8z"
        >
          Cargo
        </h1>
        <p
          class="css-ud68x3"
        >
          Analista
        </p>
      </div>
      <div>
        <h1
          class="css-1ccxq8z"
        >
          Unidade
        </h1>
        <p
          class="css-ud68x3"
        >
          Quartel General
        </p>
      </div>
    </div>
    <div
      class="css-nrzz4n"
    >
      <h1
        class="css-1ccxq8z"
      >
        Status
      </h1>
      <div
        class="css-1xl4ljt"
        color="active"
      >
        <h3
          class="css-1rt2vi7"
        >
          Ativo
        </h3>
      </div>
    </div>
  </div>
</div>
`

exports[
	`<AccordionItem /> should render the name \`Pikachu Soares do Santos Dias\` 1`
] = `
<div
  class="css-hbebh7"
>
  <div
    class="css-1s9w40j"
  >
    <h1
      class="css-1ccxq8z"
    >
      Nome Completo
    </h1>
    <button
      aria-label="button-toogle"
      class="css-e6mruz"
    >
      <div
        class="css-o34hqt"
      >
        <img
          class="css-1q4j5aa"
          src="/img/brand.svg"
        />
        <h1
          class="css-1fppzxh"
        >
          Pikachu Soares do Santos Dias
        </h1>
      </div>
      <svg
        color="#587169"
        fill="currentColor"
        height="24"
        stroke="currentColor"
        stroke-width="0"
        style="color: rgb(88, 113, 105);"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0V0z"
          fill="none"
        />
        <path
          d="M7.41 8.59L12 13.17l4.59-4.58L18 10l-6 6-6-6 1.41-1.41z"
        />
      </svg>
    </button>
    <div
      class="css-58t2qa"
    >
      <div>
        <h1
          class="css-1ccxq8z"
        >
          Departamento
        </h1>
        <p
          class="css-ud68x3"
        >
          Administrativo
        </p>
      </div>
      <div>
        <h1
          class="css-1ccxq8z"
        >
          Cargo
        </h1>
        <p
          class="css-ud68x3"
        >
          Analista
        </p>
      </div>
      <div>
        <h1
          class="css-1ccxq8z"
        >
          Unidade
        </h1>
        <p
          class="css-ud68x3"
        >
          Quartel General
        </p>
      </div>
    </div>
    <div
      class="css-nrzz4n"
    >
      <h1
        class="css-1ccxq8z"
      >
        Status
      </h1>
      <div
        class="css-1xl4ljt"
        color="active"
      >
        <h3
          class="css-1rt2vi7"
        >
          Ativo
        </h3>
      </div>
    </div>
  </div>
</div>
`

exports[`<AccordionItem /> should render the role \`Analista\` 1`] = `
<div
  class="css-hbebh7"
>
  <div
    class="css-1s9w40j"
  >
    <h1
      class="css-1ccxq8z"
    >
      Nome Completo
    </h1>
    <button
      aria-label="button-toogle"
      class="css-e6mruz"
    >
      <div
        class="css-o34hqt"
      >
        <img
          class="css-1q4j5aa"
          src="/img/brand.svg"
        />
        <h1
          class="css-1fppzxh"
        >
          Pikachu Soares do Santos Dias
        </h1>
      </div>
      <svg
        color="#587169"
        fill="currentColor"
        height="24"
        stroke="currentColor"
        stroke-width="0"
        style="color: rgb(88, 113, 105);"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0V0z"
          fill="none"
        />
        <path
          d="M7.41 8.59L12 13.17l4.59-4.58L18 10l-6 6-6-6 1.41-1.41z"
        />
      </svg>
    </button>
    <div
      class="css-58t2qa"
    >
      <div>
        <h1
          class="css-1ccxq8z"
        >
          Departamento
        </h1>
        <p
          class="css-ud68x3"
        >
          Administrativo
        </p>
      </div>
      <div>
        <h1
          class="css-1ccxq8z"
        >
          Cargo
        </h1>
        <p
          class="css-ud68x3"
        >
          Analista
        </p>
      </div>
      <div>
        <h1
          class="css-1ccxq8z"
        >
          Unidade
        </h1>
        <p
          class="css-ud68x3"
        >
          Quartel General
        </p>
      </div>
    </div>
    <div
      class="css-nrzz4n"
    >
      <h1
        class="css-1ccxq8z"
      >
        Status
      </h1>
      <div
        class="css-1xl4ljt"
        color="active"
      >
        <h3
          class="css-1rt2vi7"
        >
          Ativo
        </h3>
      </div>
    </div>
  </div>
</div>
`

exports[`<AccordionItem /> should render the status \`Ativo\` 1`] = `
<div
  class="css-hbebh7"
>
  <div
    class="css-1s9w40j"
  >
    <h1
      class="css-1ccxq8z"
    >
      Nome Completo
    </h1>
    <button
      aria-label="button-toogle"
      class="css-e6mruz"
    >
      <div
        class="css-o34hqt"
      >
        <img
          class="css-1q4j5aa"
          src="/img/brand.svg"
        />
        <h1
          class="css-1fppzxh"
        >
          Pikachu Soares do Santos Dias
        </h1>
      </div>
      <svg
        color="#587169"
        fill="currentColor"
        height="24"
        stroke="currentColor"
        stroke-width="0"
        style="color: rgb(88, 113, 105);"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0V0z"
          fill="none"
        />
        <path
          d="M7.41 8.59L12 13.17l4.59-4.58L18 10l-6 6-6-6 1.41-1.41z"
        />
      </svg>
    </button>
    <div
      class="css-58t2qa"
    >
      <div>
        <h1
          class="css-1ccxq8z"
        >
          Departamento
        </h1>
        <p
          class="css-ud68x3"
        >
          Administrativo
        </p>
      </div>
      <div>
        <h1
          class="css-1ccxq8z"
        >
          Cargo
        </h1>
        <p
          class="css-ud68x3"
        >
          Analista
        </p>
      </div>
      <div>
        <h1
          class="css-1ccxq8z"
        >
          Unidade
        </h1>
        <p
          class="css-ud68x3"
        >
          Quartel General
        </p>
      </div>
    </div>
    <div
      class="css-nrzz4n"
    >
      <h1
        class="css-1ccxq8z"
      >
        Status
      </h1>
      <div
        class="css-1xl4ljt"
        color="active"
      >
        <h3
          class="css-1rt2vi7"
        >
          Ativo
        </h3>
      </div>
    </div>
  </div>
</div>
`
